--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react": "15.3.2",
     "react-dom": "15.3.2",
     "react-router": "^3.0.0",
+    "react-split-pane": "^0.1.54",
     "sass-loader": "^4.0.2"
   },
   "devDependencies": {
