--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "homepage": "https://github.com/alicoding/react-webpack-babel#readme",
   "dependencies": {
     "bootstrap": "^3.3.7",
+    "keymirror": "^0.1.1",
     "node-sass": "^3.10.1",
     "react": "15.3.2",
     "react-dom": "15.3.2",
@@ -32,6 +33,7 @@
     "babel-plugin-transform-runtime": "^6.15.0",
     "babel-preset-es2015": "6.16.0",
     "babel-preset-react": "6.16.0",
+    "babel-preset-stage-0": "6.16.0",
     "babel-runtime": "^6.11.6",
     "css-loader": "0.25.0",
     "extract-text-webpack-plugin": "^1.0.1",
