--- a/package.json
+++ b/package.json
@@ -17,13 +17,15 @@
   "homepage": "https://github.com/alicoding/react-webpack-babel#readme",
   "dependencies": {
     "bootstrap": "^3.3.7",
+    "classnames": "^2.2.5",
     "keymirror": "^0.1.1",
     "node-sass": "^3.10.1",
     "react": "15.3.2",
     "react-dom": "15.3.2",
     "react-router": "^3.0.0",
     "react-split-pane": "^0.1.54",
-    "sass-loader": "^4.0.2"
+    "sass-loader": "^4.0.2",
+    "shortid": "^2.2.6"
   },
   "devDependencies": {
     "babel-core": "6.17.0",
